--- a/.atom-build.yml
+++ b/.atom-build.yml
@@ -1,1 +1,1 @@
-cmd: docker build -t waze . ; python3 -m py_compile main.py
+cmd: python3 -m py_compile main.py && travis lint && docker build -t waze .
